// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render 1`] = `
<DocumentFragment>
  <textarea
    class="sc-AxjAm bcybyt overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
    data-testid="Textarea"
  />
</DocumentFragment>
`;

exports[`Textarea should render as disabled 1`] = `
<DocumentFragment>
  <textarea
    class="sc-AxjAm bcybyt overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
    data-testid="Textarea"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Textarea should render as invalid 1`] = `
<DocumentFragment>
  <textarea
    aria-invalid="true"
    class="sc-AxjAm bcybyt overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
    data-testid="Textarea"
  />
</DocumentFragment>
`;
